@@ -2,6 +2,8 @@ Version 0.8.5 (2013-05-XX)
 --------------------------
 Hadoop ETL: bumped to 0.3.1
 Hadoop ETL: bumped Scalding to 0.8.5
+Hadoop ETL: bumped Scala version to 2.10.0
+Hadoop ETL: bumped scala-maxmind-geoip to 0.0.5 to work with Scala 2.10.0
 Hadoop ETL: bumped SBT from 0.12.1 to 0.12.3
 Hadoop ETL: added Twitter Maven Repo as a resolution repo, thanks @rgabo (#239)
 Hadoop ETL: replaced Bytes in CanonicalOutput with JBytes (#254)
